css/styles.css
.body-home {
    background-image: url('../img/pancake-bg-sirin.png');
    background-color: #333;
    background-repeat: no-repeat;
    background-attachment: fixed;  
    background-size: cover;
  }
  .body-menu{
    margin:0;
    padding: 0;
    box-sizing: border-box;
    background-color: #FEFBF3;
    font-family: 'Playfair Display', serif;
  }

  h1{
    color:#ffe4ab; 
    text-shadow:2px 2px 3px black; 
    font-family: 'Playfair Display', serif;
  }
  h2{
    color:#ffe4ab; 
    text-shadow:2px 2px 3px black; 
    font-family: 'Playfair Display', serif;
  }
  .img-menu{
    width: 100%;
}

figure{
    margin: auto;
    text-align: center;
    max-width: 150px;
}

span{
    justify-self: flex-end;
    
}
  .main-div-1{
    display: flex; 
    margin: auto; 
    padding: 15em 4em 4em 4em; 
    align-items: center; 
    flex-direction: column;
  }
  .main-div-2{
    margin-top: 10px; 
    font-family: 'Playfair Display', serif;
  }
  .center{
    text-align: center;
}

.uppercase{
    text-transform: uppercase;
}

.wrapper{
    display: grid;
    gap: 6rem;
    max-width: 90vw;
    padding: 1rem 1rem;
    margin: auto;
    margin-bottom: 10rem;
}

.menu-grid{
    display: grid;
    gap:4rem;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
}

.dish-grid{
    display: grid;
    grid-template-columns: repeat(2,1fr);
    align-items: center;
}
.description{
    line-height: 1.5rem;
    margin-top:0;
    text-align: justify;
}

.course-heading{
    margin-bottom: 3rem;
}

#allergens{
    display: grid;
    grid-auto-flow: column;
    max-width: 900px;
    background-color: #faf3e7;
    margin: auto;
    gap: 1rem;
    padding: 1rem;
    margin-bottom: 1rem;
    border: 1px solid black;
}
 
/*  NAVIGATION START */ 
  .navbar {
  overflow: hidden;
  background-color: #333;
  position: fixed;
  display: flex;
  margin-top: 0;
  width: 100%;
  justify-content: center;
}

.navbar a {
  display: inline-block;
  color: #f2f2f2;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
}

.navbar a:hover {
  background: #fef;
  color: tomato;
}

/*  NAVIGATION END */ 
/* Main CSS */
input.send-message {
    margin-top:1.5em;
    border-radius: 5px;
    box-shadow: inset 0 0 0 2px #f3f6fe;
    border:0;
    transition: background-color 0.2s ease-in-out;
    height: 3em;
    text-align: center;
    background-color: #ffe4ab;
    font-size: 16px;
    width:100%;
}
input.send-message:hover {
    background-color: transparent;
}
.body-contact {
    background-color: #FEFBF3;
    font-family: 'Playfair Display', serif;
    margin:8px;
}
.myForm {
    margin: 0 3em 0 0;
}
.form-container {
    display:flex;
    flex-direction:row;
    flex-wrap: nowrap;
    padding:10px 0px 10px 0px;
}
.main-div {
    display:flex;
    width:90vw;
    margin:auto;
}
.info-point {
    padding:10px 0px 10px 0px;
}
.infos {
    display:flex; 
    flex-direction: column;
}
#content {
    display:block;
    padding: 8% 2em 3em 2em;
    margin: 0 auto;
    width:max-content;
}
/* End main css */

  /* Menu-button start */
      button {
            margin-top: 1em;
            border-radius: 5px;
            border:0;
            height: 5em;
            text-align: center;
            background-color: #333;
            font-size: 18px;
            width:100%;
            color: white;
        }
        button:hover {
            background-color:#fef;
            font-size: larger;
            color: tomato;
            
        }
  /* Menu-button end */
  
/*  SOCIAL MEDIA ICONS START  */   
  .fa {
    padding: 10px;
    font-size: 20px;
    width: 20px;
    text-align: center;
    text-decoration: none;
    margin: 5px 2px;
    border-radius: 50%;
    }

  .fa:hover {
    background-color: #333;
    color: tomato;
  }

  .fa-facebook {
    background: #3B5998;
    color: white;
  }

  .fa-instagram {
    background: tomato;
    color: white;
  }

  .fa-snapchat-ghost {
    background: #fffc00;
    color: white;
    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
  }
/*  SOCIAL MEDIA ICONS END  */

footer {
position: fixed;
display: flex;
height: 50px;
bottom:0px;
left:0px;
right:0px;
margin-bottom:0px;
justify-content: center;
}

article{
    margin-top: 70px;
}

.img-about{
    margin-top: 70px;
}
 /* Set the type of box to border-box for both cards used for the about page*/
 .card {
    width: 100%;
    box-sizing: border-box;
  }
    
   /* Scaling the images to look nicer */
    .card > div.left > img,
    .card > div.right > img{
      width: 70%;
      margin-left: auto;
      margin-right: auto;
      padding-bottom: 2%;
      padding-top:2%;
      display: block;
    }

    /*Making the text-boxes look better */

    .card > div.right {
      text-align: left;
      vertical-align: top;
      padding-top:0.5%;
      width: 70%;
      margin-left: auto;
      margin-right: auto;
    }

    .card > div.left > article > p {
      text-align: left;
      padding-top:0.5%;
      width: 70%;
      margin-left: auto;
      margin-right: auto;
      

    }




    /* Making the headings appear in the center */
    .card > div.right > article > h1,
    .card > div.left > article > h2 {
      text-align: center;
              font-family: 'Playfair Display', serif;
    }

    /* Setting the size of both boxes in the card */
   .card > div.left,
   .card > div.right {
   height: 100%;
   width: 45%;

}
   /*Setting the card to align elements in the middle*/
   .card > div {
   vertical-align: middle;
   display: inline-block;
   }

